product_docs/docs/warehousepg/7.3/admin_guide/query/index.mdx
---
title: 'SQL: Querying Data'
originalFilePath: >-
  https://github.com/warehouse-pg/whpg-docs/blob/main/docs/docs/7x/admin_guide/query/topics/query.md
redirects:
  - query
editTarget: originalFilePath

---

This topic provides information about using SQL in WarehousePGs.

You enter SQL statements called queries to view, change, and analyze data in a database using the `psql` interactive SQL client and other client tools.

-   **[About WarehousePG Query Processing](parallel-proc.mdx)**  
    This topic provides an overview of how WarehousePG processes queries. Understanding this process can be useful when writing and tuning queries.
-   **[About GPORCA](query-piv-optimizer.mdx)**  
    In WarehousePG, the default GPORCA optimizer co-exists with the Postgres-based planner.
-   **[Defining Queries](defining-queries.mdx)**  
    WarehousePG is based on the PostgreSQL implementation of the SQL standard.
-   **[WITH Queries (Common Table Expressions)](CTE-query.mdx)**  
    The `WITH` clause provides a way to use subqueries or perform a data modifying operation in a larger `SELECT` query. You can also use the `WITH` clause in an `INSERT`, `UPDATE`, or `DELETE` command.
-   **[Using Functions and Operators](functions-operators.mdx)**  
    Description of user-defined and built-in functions and operators in WarehousePG.
-   **[Working with JSON Data](json-data.mdx)**  
    WarehousePG supports the `json` and `jsonb` data types that store JSON (JavaScript Object Notation) data.
-   **[Working with XML Data](xml-data.mdx)**  
    WarehousePG supports the `xml` data type that stores XML data.
-   **[Using Full Text Search](../textsearch)**  
    WarehousePG provides data types, functions, operators, index types, and configurations for querying natural language documents.
-   **[Query Performance](query-performance.mdx)**  
    WarehousePG dynamically eliminates irrelevant partitions in a table and optimally allocates memory for different operators in a query.
-   **[Managing Spill Files Generated by Queries](spill-files.mdx)**  
    WarehousePG creates spill files, also known as workfiles, on disk if it does not have sufficient memory to run an SQL query in memory.
-   **[Query Profiling](query-profiling.mdx)**  
    Examine the query plans of poorly performing queries to identify possible performance tuning opportunities.
-   **[Just-in-Time Compilation (JIT)](just-in-time.mdx)**
    WarehousePG supports Just-in-Time compilation for long-running CPU-bound queries.

**Parent topic:** [WarehousePG Administrator Guide](..)
